--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /.vs/Carisbrook/v15/Server/sqlite3
 /DemoService/bin/Debug
 /DemoCore/obj/Debug
+/.vs
+/DemoCore/obj/Release
+/DemoModel/obj/Release
+/DemoService/obj/Release
