--- a/DemoService/DemoService.csproj
+++ b/DemoService/DemoService.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Class1.cs" />
     <Compile Include="Menu\MenuService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DemoCore\Demo.Core.csproj">
